--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "repository": "https://github.com/kasvrol/OscarServiceWeb.git",
   "author": "kasvrol <dovalekarolina@gmail.com>",
   "license": "MIT",
-  "scripts":{
+  "scripts": {
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "pg": "^8.13.1",
+    "postgres": "^3.4.5"
   },
   "type": "module"
 }
