--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "kasvrol <dovalekarolina@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon ./src/index.js"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
